tests/class_munging/class_munging.exp
Error -------------------------------------------------------------------------------------------- with_munging.js:13:11

Cannot call `this._method` because property `_method` is missing in `Bar` [1]. [prop-missing]

   with_munging.js:13:11
   13|     (this._method(): string); // error
                 ^^^^^^^

References:
   with_munging.js:11:7
   11| class Bar extends Foo {
             ^^^ [1]



Found 1 error
